--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "myp",
+  "name": "Color Converter",
+  "displayName": "Color Converter",
+  "description": "Convert your color codes to HEX , HSL and RGB",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +12,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.6",
     "react": "18.2.0",
-    "react-native": "^0.71.6"
+    "react-native": "^0.71.6",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-shadow-2": "^7.0.7",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
